--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,6 +1,64 @@
-.card {
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.card-card {
     width: 150px;
     height: 220px;
-    margin-right: 2em;
+    margin-right: 1em;
     margin-top: 2em;
+    cursor: pointer;
 }
+
+.card-card.flipped .inner {
+    transform: rotateY(180deg);
+}
+
+
+.inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: 0.6s cubic-bezier(0.38, 0.02, 0.09, 1.66) all;
+}
+
+.card-card .front,
+.card-card .back {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+}
+
+.card-card .front {
+    transform: rotateY(180deg);
+}
+
+.card-card .back {
+    background: #51dce0;
+    color: #d6aeb5;
+    font-size: 100px;
+    transition: 0.3s ease all;
+}
+
+.image-card {
+    width: 150px;
+    height: 220px;
+}
+
+.card-card .back:hover {
+    background: #dba8b1;
+    transform: scale(1.02);
+}
+
+
+
