--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -5,3 +5,17 @@ body {
 .container {
     margin-top: 6em;
 }
+
+.counter {
+    font-size: 20px;
+}
+
+.statistics {
+    display: flex;
+    justify-content: space-between;
+}
+
+.counter-mistakes {
+    font-size: 20px;
+    margin-right: 4.2em;
+}
