--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-    margin-top: 6em;
+    margin-top: 4em;
 }
 
 .counter {
@@ -18,4 +18,8 @@ body {
 .counter-mistakes {
     font-size: 20px;
     margin-right: 4.2em;
+}
+
+.btn {
+    margin-top: 0.5em;
 }
